# libgedit-amtk

./: DEVELOPMENT.md  HACKING  Makefile.am  NEWS  README  README.md  amtk.doap  configure.ac  meson.build  meson_options.txt
amtk/: amtk-action-info-central-store.c  amtk-action-info-central-store.h  amtk-action-info-store.c  amtk-action-info-store.h  amtk-action-info.c  amtk-action-info.h  amtk-action-map.c  amtk-action-map.h  amtk-application-window.c  amtk-application-window.h  amtk-factory.c  amtk-factory.h  amtk-gmenu.c  amtk-gmenu.h  amtk-init.c  amtk-init.h  amtk-macros.h  amtk-menu-item.c  amtk-menu-item.h  amtk-menu-shell.c  amtk-menu-shell.h  amtk-shortcuts.c  amtk-shortcuts.h  amtk-types.h  amtk-utils.c  amtk-utils.h  amtk.h  meson.build  symbol.map
docs/: dev-notes  more-information.md  roadmap.md
docs/reference/: amtk-docs.xml  amtk-intro.xml  amtk-sections.txt  gradual-porting.xml  libgedit-amtk-intro.xml  libgedit-amtk-sections.txt  meson.build
docs/reference/xml/: meson.build
po/: LINGUAS  ca.po  el.po  hr.po  ka.po  pt.po  zh_CN.po
tests/interactive-tests/: meson.build  test-headerbar.c  test-traditional-ui.c
tests/unit-tests/: test-action-info-store.c  test-action-map.c  test-utils.c
testsuite/: meson.build
win32/: config-msvc.mak.in  detectenv-msvc.mak  introspection-msvc.mak
